[gd_scene load_steps=2 format=3 uid="uid://6kfogt2jbret"]

[ext_resource type="Script" path="res://scenes/UI/PauseMenu.gd" id="1_cooq0"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cooq0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 240.0
offset_right = 568.0
offset_bottom = 405.0
scale = Vector2(3.5, 3.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 96.0
offset_bottom = 128.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "= Pause ="
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="SettingButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
